deployments/nodejs-app-build/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nodejs-app-build
  labels:
    name: nodejs-app-build
    app: nodejs-app-build
