deployments/nodejs-app-build/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app-build
  namespace: nodejs-app-build
  labels:
    app: nodejs-app-build
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: nodejs-app-build
