deployments/nodejs-app-build/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nodejs-app-build
  namespace: nodejs-app-build
  labels:
    app: nodejs-app-build
spec:
  to:
    kind: Service
    name: nodejs-app-build
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
